Merge Intervals without any util